let's try this again...

--- a/Themes/_fallback/Fonts/frutiger 24px.ini
+++ b/Themes/_fallback/Fonts/frutiger 24px.ini
@@ -393,5 +393,23 @@ AdvanceExtraPixels=0
 127=7
 
 [polish]
-line 0=ĄĘŁŃŚŹŻ
-line 1=ąęłńśźż
+line 0=ĄĆĘŁŃŚŹŻ
+line 1=ąćęłńśźż
+
+0=15
+1=10
+2=12
+3=12
+4=12
+5=12
+6=13
+7=13
+
+8=11
+9=11
+10=11
+11=6
+12=11
+13=10
+14=10
+15=10
