Checkpoints lumped with judgments on eval.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3226,7 +3226,7 @@ PrevScreen=Branch.AfterEvaluation()
 LightsMode="LightsMode_MenuStartOnly"
 #
 Summary=false
-CheckpointsWithJudgments=false
+CheckpointsWithJudgments=EvalUsesCheckpointsWithJudgments()
 #
 TimerSeconds=20
 #
