Don't show held result for Pump.
They care about checkpoints/tickcount.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1512,7 +1512,7 @@ ShowJudgmentLineW2=true
 ShowJudgmentLineW3=true
 ShowJudgmentLineW4=true
 ShowJudgmentLineW5=true
-ShowJudgmentLineHeld=true
+ShowJudgmentLineHeld=(GAMESTATE:GetCurrentGame():GetName() ~= "pump")
 ShowJudgmentLineMiss=true
 ShowJudgmentLineMaxCombo=true
 ShowGradeArea=true
