Add StepsUseChartName metric.
This is in ScreenOptionsMaster.

To the C++ guys: please don't yell at the goto.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2091,6 +2091,7 @@ OptionRowExitMetricsGroup="OptionRowExit"
 Fallback="ScreenOptions"
 Class="ScreenOptionsMaster"
 NoteSkinSortOrder=""
+StepsUseChartName=false
 
 # ExitItem is an exit row with the "Exit" text as a menu item; ExitTitle
 # uses the menu title.
