Remove ScreenTestFonts. It is useless. (please update Xcode and VC projects to reflect this, I will be removing some other useless stuff soon)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -107,7 +107,7 @@ ScreenSyncOverlay.cpp ScreenSyncOverlay.h \
 ScreenSystemLayer.cpp ScreenSystemLayer.h ScreenSetTime.cpp ScreenSetTime.h \
 ScreenSongOptions.cpp ScreenSongOptions.h \
 ScreenSplash.cpp ScreenSplash.h \
-ScreenTestFonts.cpp ScreenTestFonts.h ScreenTestInput.cpp ScreenTestInput.h \
+ScreenTestInput.cpp ScreenTestInput.h \
 ScreenTestLights.cpp ScreenTestLights.h ScreenTestSound.cpp ScreenTestSound.h ScreenTextEntry.cpp ScreenTextEntry.h \
 ScreenTitleMenu.cpp ScreenTitleMenu.h \
 ScreenUnlockBrowse.cpp ScreenUnlockBrowse.h \
