why is operator button allowed?

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2453,6 +2453,7 @@ LineHighlightP2ChangeToExitCommand=
 CursorOnCommand=visible,false
 
 [ScreenOptionsService]
+AllowOperatorMenuButton=false
 Class="ScreenOptionsMaster"
 Fallback="ScreenOptionsSimpleService"
 #
