--- a/src/StepMania-net2008.vcproj
+++ b/src/StepMania-net2008.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="sm-ssc"
+	Name="StepMania"
 	ProjectGUID="{AF209DBD-24BD-4356-8DFE-41751B221195}"
 	RootNamespace="StepMania"
 	Keyword="MFCProj"
