more theme tidying. hopefully get this better running for saner people.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -110,7 +110,7 @@ ItemsSpacingY=24
 NumShownItems=8
 
 [FadingBanner]
-BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;accelerate,0.05;glow,Colors.Alpha( Color("White"), 0.45 );decelerate,0.175;diffusealpha,0;glow,Color("Invisible");
+BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;accelerate,0.05;glow,Color.Alpha( Color("White"), 0.45 );decelerate,0.175;diffusealpha,0;glow,Color("Invisible");
 
 [Gameplay]
 
@@ -422,7 +422,7 @@ end;
 ShowAutogen=true
 AutogenX=0
 AutogenY=0
-#AutogenOnCommand=diffuseshift;effectcolor1,Colors.Alpha( Color("Green") , 0.5 );effectcolor2,ColorLightTone( Color("Green") );
+#AutogenOnCommand=diffuseshift;effectcolor1,Color.Alpha( Color("Green") , 0.5 );effectcolor2,ColorLightTone( Color("Green") );
 AutogenOnCommand=blend,Blend.Add;diffuseshift;effectcolor1,color("#FFCC00FF");effectcolor2,color("#FFCC0088");
 #
 ShowStepsType=GetUserPrefB("UserPrefAutoSetStyle")
@@ -479,6 +479,7 @@ Fallback="StepsDisplay"
 # end;
 PillTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 	local fItemWidth = ( 256 / numItems ) \
+	self:x( ((itemIndex-(numItems/2))*fItemWidth) + ( numItems / 2 ) ); \
 	self:zoomtowidth(fItemWidth); \
 end;
 # PillTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
@@ -489,8 +490,8 @@ end;
 	# self:effecttiming(1,0.01875*itemIndex,1,1-(0.01875*itemIndex)); \
 	# self:effectclock('beatnooffset'); \
 # end;
-TextureCoordScaleX=1
-NumPills=1
+TextureCoordScaleX=256/16
+NumPills=16
 
 [TextBanner]
 TitleOnCommand=horizalign,left;shadowlength,1;
@@ -1333,10 +1334,10 @@ BPMDisplayY=SCREEN_BOTTOM-16
 BPMDisplayOnCommand=draworder,101
 BPMDisplayOffCommand=bounceend,0.25;zoom,0
 #
-ShowStageDisplay=false
+ShowStageDisplay=true
 StageDisplayX=SCREEN_CENTER_X
 StageDisplayY=SCREEN_TOP+24
-StageDisplayOnCommand=zoom,0.5;
+StageDisplayOnCommand=zoom,0.675;
 StageDisplayOffCommand=bounceend,0.25;zoom,0
 #
 ShowScoreFrame=GetUserPrefB("GameplayFooter");
