Bug 176: Small theme and behavior tweaks. ( http://ssc.ajworld.net/sm-ssc/bugtracker/view.php?id=176 )

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2036,13 +2036,13 @@ RowInitCommand=
 RowOnCommand=
 RowOffCommand=
 RowPositionTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) self:y(SCREEN_CENTER_Y-146+36*offsetFromCenter) end
-ExplanationP1X=SCREEN_CENTER_X-240
+ExplanationP1X=SCREEN_CENTER_X-256-20
 ExplanationP1Y=SCREEN_CENTER_Y+174
-ExplanationP1OnCommand=shadowlength,0;wrapwidthpixels,(SCREEN_WIDTH*0.78)*1.5;zoom,0.5;halign,0;cropright,1;linear,0.5;cropright,0
+ExplanationP1OnCommand=shadowlength,1;wrapwidthpixels,192/0.5;zoom,0.5;halign,0;cropright,1;linear,0.5;cropright,0
 ExplanationP1OffCommand=
-ExplanationP2X=SCREEN_CENTER_X+240
+ExplanationP2X=SCREEN_CENTER_X+256+20
 ExplanationP2Y=SCREEN_CENTER_Y+174
-ExplanationP2OnCommand=shadowlength,0;wrapwidthpixels,(SCREEN_WIDTH*0.78)*1.5;zoom,0.5;halign,1;cropright,1;linear,0.5;cropright,0
+ExplanationP2OnCommand=shadowlength,1;wrapwidthpixels,192/0.5;zoom,0.5;halign,1;cropright,1;linear,0.5;cropright,0
 ExplanationP2OffCommand=
 ExplanationTogetherX=SCREEN_CENTER_X
 ExplanationTogetherY=SCREEN_CENTER_Y+184
@@ -2155,25 +2155,25 @@ Effect,13="mod,bumpy;name,Bumpy"
 Effect,14="mod,beat;name,Beat"
 Effect,15="mod,45% xmode;name,XMode"
 
-EffectsReceptor="selectmultiple"
-EffectsReceptorDefault=""
+EffectsReceptor="5;selectmultiple"
+EffectsReceptorDefault="mod,no confusion,no invert,no flip,no mini,no xmode"
 EffectsReceptor,1="mod,confusion;name,Confusion"
 EffectsReceptor,2="mod,invert;name,Invert"
 EffectsReceptor,3="mod,Flip;name,Flip"
 EffectsReceptor,4="mod,mini;name,Mini"
-EffectsReceptor,5="mod,-100% mini;name,Big"
-EffectsReceptor,6="mod,45% xmode;name,XMode"
+# EffectsReceptor,5="mod,-100% mini;name,Big"
+EffectsReceptor,5="mod,45% xmode;name,XMode"
 
-EffectsArrow="selectmultiple"
-EffectsArrowDefault=""
+EffectsArrow="8;selectmultiple"
+EffectsArrowDefault="mod,no drunk,no dizzy,no twirl,no roll,no beat,no tipsy,no tornado,no bumpy"
 EffectsArrow,1="mod,drunk;name,Drunk"
 EffectsArrow,2="mod,dizzy;name,Dizzy"
 EffectsArrow,3="mod,twirl;name,Twirl"
 EffectsArrow,4="mod,roll;name,Roll"
 EffectsArrow,5="mod,beat;name,Beat"
-EffectsArrow,6="mod,tispy;name,Tipsy"
+EffectsArrow,6="mod,tipsy;name,Tipsy"
 EffectsArrow,7="mod,50% tornado;name,Tornado"
-EffectsArrow,8="mod,drunk;name,Bumpy"
+EffectsArrow,8="mod,bumpy;name,Bumpy"
 
 # Effect="9"
 # EffectDefault="mod,no drunk,no dizzy,no confusion,no mini,no flip,no tornado,no tipsy"
@@ -2816,11 +2816,14 @@ PlayMusic=false
 #
 TimerSeconds=30
 #
-LineNames="1,2,3,4,5,6,R,7,8,9,10,11,12,13,14,16,17"
+LineNames="1,2,3A,3B,4,5,6,R,7,8,9,10,11,12,13,14,16,17"
 Line1="lua,SpeedMods()"
 # Line1="list,Speed"
 Line2="list,Accel"
-Line3="list,Effect"
+#Line3="list,Effect"
+Line3A="list,EffectsReceptor"
+Line3B="list,EffectsArrow"
+#
 Line4="list,Appearance"
 Line5="list,Turn"
 Line6="list,Insert"
