add missing BeginnerHelper metrics, should hopefully fix issue 410

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -229,6 +229,16 @@ ScrollSortOrder=false
 # Control how fast the banner scrolls. Higher numbers mean slower.
 ScrollSpeedDivisor=2
 
+[BeginnerHelper]
+HelperX=SCREEN_CENTER_X+0
+HelperY=SCREEN_CENTER_Y+80
+# All X,Y coordinates are relative to the HelperX,Y
+Player1_X=-125
+Player2_X=SCREEN_CENTER_X-195
+PlayerAngle=40
+ShowDancePad=false
+DancePadAngle=36
+
 [BitmapText]
 # The colors in the 'roulette' text. you can have alot!
 NumRainbowColors=7
