[BeginnerHelper] Removed DancePadAngle metric in favor of DancePadOnCommand. The same goes for PlayerAngle, rotation is now handled in PlayerP1/2OnCommand.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -230,14 +230,18 @@ ScrollSortOrder=false
 ScrollSpeedDivisor=2
 
 [BeginnerHelper]
-HelperX=SCREEN_CENTER_X+0
+HelperX=SCREEN_CENTER_X
 HelperY=SCREEN_CENTER_Y+80
+
 # All X,Y coordinates are relative to the HelperX,Y
-Player1_X=-125
-Player2_X=SCREEN_CENTER_X-195
-PlayerAngle=40
+Player1X=-125
+Player2X=195
+PlayerP1OnCommand=halign,0;rotationx,40;zoom,20
+PlayerP2OnCommand=halign,0;rotationx,40;zoom,20
+
 ShowDancePad=false
-DancePadAngle=36
+# "Pad should always be 3 units bigger in zoom than the dancer."
+DancePadOnCommand=halign,0;rotationx,36;zoom,23
 
 [BitmapText]
 # The colors in the 'roulette' text. you can have a lot!
