add the two other missing characters from issue 226

--- a/Themes/_fallback/Fonts/_japanese 24px.ini
+++ b/Themes/_fallback/Fonts/_japanese 24px.ini
@@ -937,6 +937,12 @@ Line  7=怖底河祝匁宝暦
 61=24
 62=24
 
+[kanji 10]
+Line  0=說你
+
+0=24
+1=24
+
 [symbol]
 Line  0=＆（）？！／‥＾…＠＄＃”＋＝￥；＜＞・「」｛｝％＊
 Line  1=ａｂｃｄｅｆｇｈｉｊｋｌｍｎｏｐｑｒｓｔｙｖｗｘｙｚ
