allow theming of 'press start for options' and so on

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -977,8 +977,8 @@ SongOptionsY=SCREEN_CENTER_Y
 SongOptionsOnCommand=visible,false;draworder,1000
 SongOptionsOffCommand=
 #--
-SongOptionsShowCommand=visible,true;zoom,1.2;settext,"PRESS &START; FOR OPTIONS";decelerate,0.3;zoom,1;
-SongOptionsEnterCommand=settext,"ENTERING OPTIONS";sleep,0.5;linear,0.3;zoomy,0;
+SongOptionsShowCommand=visible,true;uppercase,true;zoom,1.2;settext,THEME:GetString("ScreenSelectMusic","Press Start For Options");decelerate,0.3;zoom,1;
+SongOptionsEnterCommand=uppercase,true;settext,THEME:GetString("ScreenSelectMusic","Entering Options");sleep,0.5;linear,0.3;zoomy,0;
 SongOptionsHideCommand=linear,0.3;zoomy,0;
 #
 ShowSongOptionsFrame=true
