--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2034,7 +2034,8 @@ PrepareScreen="ScreenGameplay"
 #
 ForceTimer=true
 TimerMetricsGroup="MenuTimerNoSound"
-TimerSeconds=5
+WaitForChildrenBeforeTweeningOut=true
+TimerSeconds=1
 #
 ScreenBeginCommand=%SetFail
 #
@@ -3388,6 +3389,8 @@ RepeatDelay=1/4
 NextScreen="ScreenProfileSaveSummary"
 #
 HelpText="Enter your name!"
+ForceTimer=true
+ForceTimerWait=true
 #
 CancelTransitionsOut=true
 MaxRankingNameLength=4
