--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -266,7 +266,8 @@ SectionExpandedOnCommand=maxwidth,194;shadowlength,1;shadowcolor,color("0.1,0.1,
 SectionCollapsedX=-38
 SectionCollapsedY=-2
 SectionCollapsedOnCommand=maxwidth,194;shadowlength,1;shadowcolor,color("0.1,0.1,0.1,0.2")
-SectionCountX=112
+#
+SectionCountX=120
 SectionCountOnCommand=zoom,0.75;strokecolor,Color("Outline")
 #
 RouletteOnCommand=maxwidth,400;shadowlength,1;zoom,0.75;rainbowscroll,true;thump,2;
@@ -856,9 +857,9 @@ MusicWheelOffCommand=bouncebegin,0.15;zoomx,0;
 #
 ShowNewSong=not GAMESTATE:IsCourseMode()
 NewSongX=SCREEN_CENTER_X-160+128-24
-NewSongY=SCREEN_TOP+160-6
+NewSongY=SCREEN_TOP+160-2
 NewSongOnCommand=finishtweening;diffuse,Color("Orange");diffusetopedge,Color("Yellow");strokecolor,Color("Black");zoom,0.675;draworder,106;playcommand,"Set"
-NewSongOffCommand=accelerate,0.35*0.5;zoom,0.675;diffusealpha,0
+NewSongOffCommand=bouncebegin,0.135;zoom,0;diffusealpha,0
 NewSongShowCommand=finishtweening;diffusealpha,1;glowshift;effectclock,'bgm';effectperiod,4;textglowmode,'TextGlowMode_Inner';
 NewSongHideCommand=finishtweening;;diffusealpha,0;stopeffect;
 #
