[NoteField] Added AreaHighlightColor metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -953,6 +953,7 @@ Bar16thAlpha=1
 RoutineNoteSkinP1=RoutineSkinP1()
 RoutineNoteSkinP2=RoutineSkinP2()
 #
+AreaHighlightColor=color("1,0,0,0.3")
 BPMColor=color("1,0,0,1")
 StopColor=color("0.8,0.8,0,1")
 DelayColor=color("0,0.8,0.8,1")
