Fix in polish fonts. corrected size and spacing.

--- a/Themes/_fallback/Fonts/frutiger 24px.ini
+++ b/Themes/_fallback/Fonts/frutiger 24px.ini
@@ -395,7 +395,8 @@ AdvanceExtraPixels=0
 [polish]
 Baseline=23
 Top=6
-
+DrawExtraPixelsLeft=2
+DrawExtraPixelsRight=2
 line 0=ĄĆĘŁŃŚŹŻ
 line 1=ąćęłńśźż
 
