[BeginnerHelper] Made BeginnerHelper run the OnCommand. Also added missing files and fixed metrics.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -230,14 +230,14 @@ ScrollSortOrder=false
 ScrollSpeedDivisor=2
 
 [BeginnerHelper]
-HelperX=SCREEN_CENTER_X
-HelperY=SCREEN_CENTER_Y+80
+HelperX=0
+HelperY=SCREEN_CENTER_Y-80
 
 # All X,Y coordinates are relative to the HelperX,Y
-Player1X=-125
+Player1X=-(SCREEN_CENTER_X/2)
 PlayerP1OnCommand=halign,0;rotationx,40;zoom,20
-Player2X=195
-PlayerP2OnCommand=halign,0;rotationx,40;zoom,20
+Player2X=(SCREEN_CENTER_X/2)
+PlayerP2OnCommand=halign,1;rotationx,40;zoom,20
 
 ShowDancePad=false
 # "Pad should always be 3 units bigger in zoom than the dancer."
