--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1881,6 +1881,7 @@ Codes=""
 TimerSeconds=60
 DoRouletteOnMenuTimer=true
 RouletteTimerSeconds=15
+IdleCommentSeconds=20
 #
 DefaultSort=GAMESTATE:IsCourseMode() and "Group" or "AllCourses"
 #
