--- a/Themes/default/Fonts/_helveticaneuelt std extblk cn 42px.ini
+++ b/Themes/default/Fonts/_helveticaneuelt std extblk cn 42px.ini
@@ -350,3 +350,32 @@ Line 9=úűüýţ˙
 93=20
 94=6
 95=11
+
+[polish]
+Baseline=43
+
+Top=11
+LineSpacing=52
+DrawExtraPixelsLeft=2
+DrawExtraPixelsRight=4
+AdvanceExtraPixels=0
+line 0=ĄĆĘŁŃŚŹŻ
+line 1=ąćęłńśźż
+
+0=23
+1=23
+2=23
+3=23
+4=23
+5=23
+6=23
+7=23
+
+8=23
+9=23
+10=23
+11=16
+12=23
+13=23
+14=23
+15=23
