--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -256,8 +256,14 @@ Lights = arch/Lights/LightsDriver.cpp arch/Lights/LightsDriver.h \
 		arch/Lights/LightsDriver_SystemMessage.cpp arch/Lights/LightsDriver_SystemMessage.h
 
 LuaDriver = arch/LuaDriver/LuaDriver.cpp arch/LuaDriver/LuaDriver.h \
+	arch/LuaDriver/LuaDriverHandle.cpp arch/LuaDriver/LuaDriverHandle.h \
 	arch/LuaDriver/LuaDriver_InputModule.cpp arch/LuaDriver/LuaDriver_InputModule.h \
 	arch/LuaDriver/LuaDriver_LightsModule.cpp arch/LuaDriver/LuaDriver_LightsModule.h
+
+#if HAVE_LIBUSB
+LIBS += -lusb-1.0
+LuaDriver += arch/LuaDriver/LuaDriverHandle_USB.cpp arch/LuaDriver/LuaDriverHandle_USB.h
+#endif
 
 MemoryCard = arch/MemoryCard/MemoryCardDriver.cpp arch/MemoryCard/MemoryCardDriver.h arch/MemoryCard/MemoryCardDriver_Null.h
 LowLevelWindow = arch/LowLevelWindow/LowLevelWindow.cpp arch/LowLevelWindow/LowLevelWindow.h
