add missing metrics for ScreenOptionsExportPackageSubPage

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3809,6 +3809,13 @@ Fallback="ScreenOptionsSimpleService"
 PrevScreen="ScreenOptionsEdit"
 NextScreen="ScreenOptionsEdit"
 
+[ScreenOptionsExportPackageSubPage]
+Class="ScreenOptionsExportPackageSubPage"
+Fallback="ScreenOptionsSimpleService"
+PrevScreen="ScreenOptionsExportPackage"
+NextScreen="ScreenOptionsExportPackage"
+
+#
 [ScreenOptionsManage]
 Fallback="ScreenOptionsSimpleService"
 TimerSeconds=-1
