fix label size on ScreenMapControllers

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2633,7 +2633,7 @@ LabelP1OffCommand=linear,0.5;diffusealpha,0
 LabelP2OnCommand=x,SCREEN_CENTER_X*1.6;zoom,0.7;shadowlength,1
 LabelP2OffCommand=linear,0.5;diffusealpha,0
 PrimaryOnCommand=x,SCREEN_CENTER_X;y,-6;zoom,0.7;shadowlength,1;ztest,true
-SecondaryOnCommand=x,SCREEN_CENTER_X;y,6;shadowlength,1;ztest,true
+SecondaryOnCommand=x,SCREEN_CENTER_X;y,6;zoom,0.5;shadowlength,1;ztest,true
 ShowExitRow=true
 
 [ScreenTestInput]
