[Theme-side] Added Fancy UI Background preference to Theme Options.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1252,7 +1252,7 @@ LineRollCombo="lua,UserPrefComboOnRolls()"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsExtended"
 PrevScreen="ScreenOptionsExtended"
-LineNames="gNotePos,gAuto,gScore,gSDisp,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter"
+LineNames="gNotePos,gAuto,gScore,gSDisp,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter,FancyUIBG"
 LinegNotePos="lua,UserPrefNotePosition()"
 LinegScore="lua,UserPrefGameplayShowScore()"
 LinegSDisp="lua,UserPrefGameplayShowStepsDisplay()"
@@ -1262,6 +1262,7 @@ LinegLongFail="lua,UserPrefLongFail()"
 LinegComboUnderField="lua,UserPrefComboUnderField()"
 LineFlashyCombo="lua,UserPrefFlashyCombo()"
 LineGameplayFooter="lua,UserPrefGameplayFooter()"
+LineFancyUIBG="lua,UserPrefFancyUIBG()"
 
 [ScreenSelectGame]
 
