--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -2102,7 +2102,7 @@ LogoOffCommand=stopeffect;bouncebegin,0.35;rotationz,360;zoom,0
 
 VersionInfoX=SCREEN_CENTER_X+114
 VersionInfoY=SCREEN_CENTER_Y+44
-VersionInfoOnCommand=settext,ProductVersion();horizalign,right;vertalign,bottom;bob;effectperiod,4;effectmagnitude,0,5.25,0;zoom,0;bounceend,0.35;zoom,0.65;shadowlength,1;shadowcolor,color("0.2,0.2,0.2,0.925");
+VersionInfoOnCommand=horizalign,right;vertalign,bottom;bob;effectperiod,4;effectmagnitude,0,5.25,0;zoom,0;bounceend,0.35;zoom,0.65;shadowlength,1;shadowcolor,color("0.2,0.2,0.2,0.925");
 ScrollerOnCommand=visible,false;
 ArcadeOverlay.TextY=SCREEN_BOTTOM-128
 
