Disable the course editor for now.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3491,11 +3491,11 @@ Fallback="ScreenOptionsSimpleService"
 NextScreen=Branch.TitleMenu()
 PrevScreen=Branch.TitleMenu()
 #LineNames="1,2,3,4,5,6"
-LineNames="1,2,3,4"
+LineNames="1,2,3"
 Line1="gamecommand;screen,ScreenEditMenu;name,Edit Songs/Steps"
 Line2="gamecommand;screen,ScreenPracticeMenu;name,Practice Songs/Steps"
 Line3="gamecommand;screen,ScreenOptionsExportPackage;name,Export Packages"
-Line4="gamecommand;screen,ScreenOptionsManageCourses;name,Edit Courses"
+# Line4="gamecommand;screen,ScreenOptionsManageCourses;name,Edit Courses"
 # Line4="gamecommand;screen,ScreenServiceActionCopyEditsMachineToMemoryCard;name,Transfer Edits to USB"
 # Line5="gamecommand;screen,ScreenOptionsGraphicsSound;name,Transfer Edits from USB"
 # Line6="gamecommand;screen,ScreenOptionsAdvanced;name,Clear USB edits"
