--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -38,11 +38,11 @@ NumRainbowColors=1
 RainbowColor1=Color("Black");
 
 [BPMDisplay]
-SetNoBpmCommand=stoptweening;stopeffect;maxwidth,128;linear,0.2;diffuse,Color("White");diffusebottomedge,BoostColor(Color("White"),0.875);
-SetNormalCommand=stoptweening;stopeffect;maxwidth,128;linear,0.2;diffuse,Color("White");diffusebottomedge,BoostColor(Color("White"),0.875);
-SetChangeCommand=stoptweening;stopeffect;maxwidth,128;linear,0.2;diffuse,Color("White");diffusebottomedge,BoostColor(Color("White"),0.875);
-SetRandomCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,color("Green");textglowmode,'TextGlowMode_Inner';glowshift;effectcolor1,color("1,1,1,0.05");effectcolor2,color("1,1,1,0.325");
-SetExtraCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,Color("Red");diffusebottomedge,BoostColor(Color("Red"),0.5);diffuseshift;effectcolor1,color("1,1,1,1");effectcolor2,color("0.475,0.475,0.475,1");
+SetNoBpmCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,Color("White");diffusebottomedge,BoostColor(Color("White"),0.875);
+SetNormalCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,Color("White");diffusebottomedge,BoostColor(Color("White"),0.875);
+SetChangeCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,Color("Orange");diffusetopedge,BoostColor(Color("Orange"),1.5);
+SetRandomCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,Color("Blue");diffusetopedge,BoostColor(Color("Blue"),1.5);
+SetExtraCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,Color("Red");diffusebottomedge,BoostColor(Color("Red"),0.5);
 RandomCycleSpeed=0.2		--  smaller numbers mean the bpm cycles faster
 
 [CodeDetector]
@@ -856,7 +856,7 @@ MusicWheelOnCommand=draworder,-5;fov,90;vanishpoint,SCREEN_CENTER_X+160,SCREEN_C
 MusicWheelOffCommand=bouncebegin,0.15;zoomx,0;
 #
 ShowNewSong=not GAMESTATE:IsCourseMode()
-NewSongX=SCREEN_CENTER_X-160+128-24
+NewSongX=SCREEN_CENTER_X-160+128-30
 NewSongY=SCREEN_TOP+160-2
 NewSongOnCommand=finishtweening;diffuse,Color("Orange");diffusetopedge,Color("Yellow");strokecolor,Color("Black");zoom,0.675;draworder,106;playcommand,"Set"
 NewSongOffCommand=bouncebegin,0.135;zoom,0;diffusealpha,0
@@ -923,10 +923,6 @@ BPMLabelX=SCREEN_CENTER_X-160-90
 BPMLabelY=SCREEN_TOP+160+(36/2)+6
 BPMLabelOnCommand=addx,-SCREEN_CENTER_X;decelerate,0.35;addx,SCREEN_CENTER_X
 BPMLabelOffCommand=bouncebegin,0.15;zoomx,0;
-#
-ShowSegmentDisplay=not GAMESTATE:IsCourseMode()
-SegmentDisplayX=SCREEN_CENTER_X-160
-SegmentDisplayY=SCREEN_TOP+160-36+4
 #
 ShowDifficultyList=not GAMESTATE:IsCourseMode();
 DifficultyListX=SCREEN_CENTER_X-160
@@ -1256,7 +1252,7 @@ LineRollCombo="lua,UserPrefComboOnRolls()"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsExtended"
 PrevScreen="ScreenOptionsExtended"
-LineNames="gNotePos,gAuto,gScore,gSDisp,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter,FancyUIBG"
+LineNames="gNotePos,gAuto,gScore,gSDisp,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter"
 LinegNotePos="lua,UserPrefNotePosition()"
 LinegScore="lua,UserPrefGameplayShowScore()"
 LinegSDisp="lua,UserPrefGameplayShowStepsDisplay()"
@@ -1266,7 +1262,6 @@ LinegLongFail="lua,UserPrefLongFail()"
 LinegComboUnderField="lua,UserPrefComboUnderField()"
 LineFlashyCombo="lua,UserPrefFlashyCombo()"
 LineGameplayFooter="lua,UserPrefGameplayFooter()"
-LineFancyUIBG="lua,UserPrefFancyUIBG()"
 
 [ScreenSelectGame]
 
@@ -2102,7 +2097,7 @@ LogoOffCommand=stopeffect;bouncebegin,0.35;rotationz,360;zoom,0
 
 VersionInfoX=SCREEN_CENTER_X+114
 VersionInfoY=SCREEN_CENTER_Y+44
-VersionInfoOnCommand=horizalign,right;vertalign,bottom;bob;effectperiod,4;effectmagnitude,0,5.25,0;zoom,0;bounceend,0.35;zoom,0.65;shadowlength,1;shadowcolor,color("0.2,0.2,0.2,0.925");
+VersionInfoOnCommand=settext,ProductVersion();horizalign,right;vertalign,bottom;bob;effectperiod,4;effectmagnitude,0,5.25,0;zoom,0;bounceend,0.35;zoom,0.65;shadowlength,1;shadowcolor,color("0.2,0.2,0.2,0.925");
 ScrollerOnCommand=visible,false;
 ArcadeOverlay.TextY=SCREEN_BOTTOM-128
 
