We had this string and didn't use it. fffffffffFixes issue fffffahrenheit 451.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2599,6 +2599,7 @@ TitleX=-54
 Class="ScreenMapControllers"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
+HelpText=Screen.String("HelpTextMapControllers")
 #
 DevicesX=SCREEN_CENTER_X
 DevicesY=SCREEN_TOP+24
