Allow Select button to take screenshots. Should hopefully fix issue 452.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -331,7 +331,7 @@ NextAnnouncer2=""
 Hidden=""
 RandomVanish=""
 SaveScreenshot1="MenuLeft-MenuRight"
-SaveScreenshot2=""
+SaveScreenshot2="Select"
 CancelAllPlayerOptions="Left,Right,Left,Right,Left,Right"
 BackInEventMode=""
 
