use a Lua function to allow for game-specific codes for CodeDetector.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -288,51 +288,52 @@ FormatString="%03.0f"
 # - = In Conjuction With / Then
 # ~ = Released
 # + = At The Same Time
-PrevSteps1="Up,Up"
-PrevSteps2="MenuUp,MenuUp"
-NextSteps1="Down,Down"
-NextSteps2="MenuDown,MenuDown"
-NextSort1="@MenuLeft-@MenuRight-Start"
-NextSort2="MenuLeft-MenuRight"
-NextSort3="@Left-@Right-Start"
-NextSort4="Left-Right"
-ModeMenu1="Up,Down,Up,Down"
-ModeMenu2="MenuUp,MenuDown,MenuUp,MenuDown"
-Mirror="Up,Left,Right,Left,Right"
-Left="Up,Down,Right,Left"
-Right="Up,Down,Left,Right"
-Shuffle="Down,Up,Down,Up"
-SuperShuffle="Down,Up,Left,Right"
-NextTransform=""
-NextScrollSpeed="Up,Left,Down,Left,Up"
-PreviousScrollSpeed="Down,Right,Up,Right,Down"
-NextAccel="Left,Right,Down,Up"
-NextEffect="Left,Down,Right"
-NextAppearance="Left,Up,Right"
-NextTurn=""
-Reverse="Down,Left,Right,Left,Right"
-HoldNotes="Right,Left,Down,Up"
-Mines=""
-Dark=""
-CancelAll="Left,Right,Left,Right,Left,Right,Left,Right"
-NextGroup="MenuUp,MenuRight,MenuRight"
-PrevGroup="MenuUp,MenuDown,MenuUp,MenuDown"
-CloseCurrentFolder="MenuUp-MenuDown"
-# Codes on the title screen.
+PrevSteps1=GetCodeForGame("PrevSteps1")
+PrevSteps2=GetCodeForGame("PrevSteps2")
+NextSteps1=GetCodeForGame("NextSteps1")
+NextSteps2=GetCodeForGame("NextSteps2")
+NextSort1=GetCodeForGame("NextSort1")
+NextSort2=GetCodeForGame("NextSort2")
+NextSort3=GetCodeForGame("NextSort3")
+NextSort4=GetCodeForGame("NextSort4")
+ModeMenu1=GetCodeForGame("ModeMenu1")
+ModeMenu2=GetCodeForGame("ModeMenu2")
+Mirror=GetCodeForGame("Mirror")
+Left=GetCodeForGame("Left")
+Right=GetCodeForGame("Right")
+Shuffle=GetCodeForGame("Shuffle")
+SuperShuffle=GetCodeForGame("SuperShuffle")
+NextTransform=GetCodeForGame("NextTransform")
+NextScrollSpeed=GetCodeForGame("NextScrollSpeed")
+PreviousScrollSpeed=GetCodeForGame("PreviousScrollSpeed")
+NextAccel=GetCodeForGame("NextAccel")
+NextEffect=GetCodeForGame("NextEffect")
+NextAppearance=GetCodeForGame("NextAppearance")
+NextTurn=GetCodeForGame("NextTurn")
+Reverse=GetCodeForGame("Reverse")
+HoldNotes=GetCodeForGame("HoldNotes")
+Mines=GetCodeForGame("Mines")
+Dark=GetCodeForGame("Dark")
+CancelAll=GetCodeForGame("CancelAll")
+NextGroup=GetCodeForGame("NextGroup")
+PrevGroup=GetCodeForGame("PrevGroup")
+CloseCurrentFolder=GetCodeForGame("CloseCurrentFolder")
+Hidden=GetCodeForGame("Hidden")
+RandomVanish=GetCodeForGame("RandomVanish")
+SaveScreenshot1=GetCodeForGame("SaveScreenshot1")
+SaveScreenshot2=GetCodeForGame("SaveScreenshot2")
+# on the player options menu.
+CancelAllPlayerOptions=GetCodeForGame("CancelAllPlayerOptions")
+# deprecated codes:
 NextTheme=""
 NextTheme2=""
 NextAnnouncer=""
 NextAnnouncer2=""
+BackInEventMode=""
 # NextTheme="Left,Left,Left,Right,Right,Right,Left,Right"
 # NextTheme2="MenuLeft,MenuLeft,MenuLeft,MenuRight,MenuRight,MenuRight,MenuLeft,MenuRight"
 # NextAnnouncer="Left,Left,Right,Right,Left,Left,Right,Right"
 # NextAnnouncer2="MenuLeft,MenuLeft,MenuRight,MenuRight,MenuLeft,MenuLeft,MenuRight,MenuRight"
-# Various.
-Hidden=""
-RandomVanish=""
-SaveScreenshot1="MenuLeft-MenuRight"
-SaveScreenshot2="Select"
-BackInEventMode=""
 
 [CodeDetectorOnline]
 Fallback="CodeDetector"
