more codedetector stuff

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1913,9 +1913,9 @@ ChangeGroupsWithGameButtons=false
 PreviousGroupButton="MenuUp"
 NextGroupButton="MenuDown"
 #
-TwoPartSelection=false
-TwoPartConfirmsOnly=false
-TwoPartTimerSeconds=15
+TwoPartSelection=TwoPartSelection()
+TwoPartConfirmsOnly=TwoPartConfirmsOnly()
+TwoPartTimerSeconds=-1
 #
 SampleMusicDelay=0.25
 SampleMusicDelayInit=0
