Cleaned up ProductivityHelpers (move some stuff from ProductivityHelpers to compat, among other things)

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3090,8 +3090,6 @@ OutTransitionLength=5
 CourseTransitionLength=0.5
 BeginFailedDelay=1.0
 #
-AllowCenter1Player=true
-#
 PlayerP1OnePlayerOneSideX=math.floor(scale((0.85/3),0,1,SCREEN_LEFT,SCREEN_RIGHT))
 PlayerP2OnePlayerOneSideX=math.floor(scale((2.15/3),0,1,SCREEN_LEFT,SCREEN_RIGHT))
 PlayerP1TwoPlayersTwoSidesX=math.floor(scale((0.85/3),0,1,SCREEN_LEFT,SCREEN_RIGHT))
@@ -3885,7 +3883,7 @@ PrevScreen="ScreenOptionsExtended"
 NextScreen="ScreenOptionsExtended"
 PlayerType="PlayerSyncMachine"
 
-AllowCenter1Player=false
+#AllowCenter1Player=false
 SyncInfoOnCommand=x,PositionPerPlayer(GAMESTATE:GetMasterPlayerNumber(),SCREEN_CENTER_X+160,SCREEN_CENTER_X-160);y,SCREEN_CENTER_Y;zoom,0;decelerate,0.5;zoom,0.6
 
 # hidden by default:
