go to game over instead of eval summary; add select menu sounds.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -841,14 +841,14 @@ SelectMenuAvailable=true
 # ModeMenuAvailable=(getenv(sMode) == Normal)
 # HelpDisplay has things added here to make sure it disappears for another 
 # actor, which we defined in this screens decorations.
-HelpSelectMenuOpenedMessageCommand=stoptweening;decelerate,0.125;diffusealpha,0;
-HelpSelectMenuClosedMessageCommand=stoptweening;accelerate,0.0725;diffusealpha,1;
+HelpSelectMenuOpenedMessageCommand=basezoom,0.75;finishtweening;zoom,1;bouncebegin,0.25;diffusealpha,0;zoom,0.75
+HelpSelectMenuClosedMessageCommand=basezoom,0.75;finishtweening;zoom,1.25;bounceend,0.125;diffusealpha,1;zoom,1
 # Clone everything from HelpDisplay: we're lazy
 ShowAlternateHelpDisplay=true
 # AlternateHelpDisplaySelectMenuOpenedMessageCommand=stoptweening;y,SCREEN_BOTTOM-16;accelerate,0.0725/2;y,SCREEN_BOTTOM-16-16;diffusealpha,1;decelerate,0.0725/2;y,SCREEN_BOTTOM-16-32;
 # AlternateHelpDisplaySelectMenuClosedMessageCommand=stoptweening;y,SCREEN_BOTTOM-16;smooth,0.125;y,SCREEN_BOTTOM-16;diffusealpha,0;
-AlternateHelpDisplaySelectMenuOpenedMessageCommand=stoptweening;accelerate,0.0725;diffusealpha,1;
-AlternateHelpDisplaySelectMenuClosedMessageCommand=stoptweening;decelerate,0.125;diffusealpha,0;
+AlternateHelpDisplaySelectMenuOpenedMessageCommand=basezoom,0.75;finishtweening;zoom,1;bouncebegin,0.125;diffusealpha,1;zoom,1
+AlternateHelpDisplaySelectMenuClosedMessageCommand=basezoom,0.75;finishtweening;zoom,1;bounceend,0.25;diffusealpha,0;zoom,0.75
 #
 MusicWheelX=SCREEN_CENTER_X+160
 MusicWheelY=SCREEN_CENTER_Y
