--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -270,7 +270,7 @@ SectionCollapsedOnCommand=maxwidth,194;shadowlength,1;shadowcolor,color("0.1,0.1
 SectionCountX=120
 SectionCountOnCommand=zoom,0.75;strokecolor,Color("Outline")
 #
-RouletteOnCommand=maxwidth,400;shadowlength,1;zoom,0.75;rainbowscroll,true;thump,2;
+RouletteOnCommand=maxwidth,400;shadowlength,1;basezoom,0.75;rainbowscroll,true;pulse;effectmagnitude,1,1.125,1;effectperiod,3
 #
 SortX=-132
 SortY=-2
