metrics changes everywhere

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -12,7 +12,6 @@
 # 01 #
 [Global]
 # This basically means that all other themes get information from this theme.
-# It's really awesome for making mods n stuff
 IsBaseTheme=1
 
 [Common]
@@ -502,13 +501,6 @@ CenterAlpha=0.25
 RadarValueMapP1OnCommand=diffuse,PlayerColor(PLAYER_1)
 RadarValueMapP2OnCommand=diffuse,PlayerColor(PLAYER_2)
 
-[GroupList]
-# Legacy Class.
-SpacingX=0
-SpacingY=0
-StartX=0
-StartY=0
-
 [HighScore]
 # Default highscore name for no entries ( like how street fighter has ' CAP ' )
 EmptyName="SSC!"
@@ -530,9 +522,6 @@ HotValue=1.0
 LifeMultiplier=1.0
 # How good you gotta hit it to keep it alive. ( W3 is 'Great' );
 MinStayAlive="TapNoteScore_W3"
-# Freiza Hack. Ugh
-# FlashHotOnNoteHit=false
-# MinScoreToFlash="TapNoteScore_W3"
 
 # How much it changes
 LifePercentChangeW1=0.008
@@ -1011,7 +1000,7 @@ NumGradeTiersUsed=7
 # StepMania Alpha 4
 # ~ ReceptorArrowsYStandard=-144
 # ~ ReceptorArrowsYReverse=144
-# sm-ssc uses a UserPreference for this.
+# SM5 uses a UserPreference for this.
 ReceptorArrowsYStandard=GetTapPosition('Standard')
 ReceptorArrowsYReverse=GetTapPosition('Reverse')
 ReceptorNoSinkScoreCutoff=4
@@ -1066,8 +1055,10 @@ RandomSuddenChance=0.1
 
 [PlayerShared]
 Fallback="Player"
-ComboXOffsetOneSideP1=-120
-ComboXOffsetOneSideP2=120
+#ComboXOffsetOneSideP1=-120
+#ComboXOffsetOneSideP2=120
+ComboXOffsetOneSideP1=0
+ComboXOffsetOneSideP2=0
 JudgmentTransformCommand=%JudgmentTransformSharedCommand
 
 [Profile]
@@ -1075,7 +1066,6 @@ ShowCoinData=true
 UnlockAuthString=""
 
 [RadarValues]
-#
 WriteComplexValues=true
 WriteSimpleValues=true
 
@@ -1340,8 +1330,8 @@ ScreenInitCommand=
 ScreenOnCommand=
 AllowOperatorMenuButton=true
 # This metric is only for people who know what they are doing. If you set this
-# to false, you are expected to know how to cancel screens in Lua. (coincidentally,
-# that would be SCREENMAN:GetTopScreen():Cancel(), for people who aren't AJ ;) )
+# to false, you are expected to know how to cancel screens in Lua.
+# (that's SCREENMAN:GetTopScreen():Cancel(), for people who aren't AJ ;) )
 HandleBackButton=true
 RepeatRate=-1
 RepeatDelay=-1
@@ -1667,26 +1657,18 @@ SleepAfterTweenOffSeconds=0
 UpdateOnMessage=""
 #
 NumChoicesOnPage1=100
-ChoiceNames="1,4,5,7"
-#~ ChoiceNames="1,2,3,4,5,6,7"
-DefaultChoice="1"
-Choice1="applydefaultoptions;text,Game Start;screen,"..Branch.StartGame()
-Choice2="screen,ScreenNetworkOptions;text,Play Online"
-Choice3="screen,ScreenSelectGame;text,Select Game"
-Choice4="screen,ScreenOptionsService;text,Options"
-Choice5="text,Edit/Share;screen,"..Branch.OptionsEdit()
-Choice6="screen,ScreenJukeboxMenu;text,Jukebox"
-Choice7="screen,ScreenExit;text,Exit"
-Choice8="screen,ScreenTest;text,Sandbox"
-# Aliases for the future.
+DefaultChoice="GameStart"
+ChoiceNames="GameStart,Options,Edit,Exit"
 ChoiceGameStart="applydefaultoptions;text,Game Start;screen,"..Branch.StartGame()
+#ChoiceQuickPlay="applydefaultoptions;text,Quick Play;"
+ChoiceOptions="screen,ScreenOptionsService;text,Options"
+ChoiceEdit="text,Edit/Share;screen,"..Branch.OptionsEdit()
+ChoiceExit="screen,ScreenExit;text,Exit"
+# Aliases for the future.
 ChoiceOnline="screen,ScreenNetworkOptions;text,Play Online"
 ChoiceGameSelect="screen,ScreenSelectGame;text,Select Game"
-ChoiceOptions="screen,ScreenOptionsSystemDirection;text,Options"
-ChoiceEdit="text,Edit/Share;screen,"..Branch.OptionsEdit()
 ChoiceJukebox="screen,ScreenJukeboxMenu;text,Jukebox"
 ChoiceSandbox="screen,ScreenTest;text,Sandbox"
-ChoiceExit="screen,ScreenExit;text,Exit"
 #
 AllowRepeatingInput=true
 ShowCursor=false
