--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -652,13 +652,8 @@ NetworkStatusOffCommand=linear,0.5;cropright,1
 #
 HelpY=SCREEN_BOTTOM-24
 #
-#ChoiceNames="1,Setup,4,5,7"
-ChoiceNames="1,4,5,7"
-#~ ChoiceNames="1,3,4,7"
-DefaultChoice="1"
-#DisabledChoices="Setup"
-#ChoiceSetup="text,Setup"
-ChoiceSetup="screen,ScreenQuickSetupOverview;text,Setup"
+ChoiceNames="GameStart,Options,Edit,Exit"
+DefaultChoice="GameStart"
 
 [ScreenQuickSetupOverview]
 IconStartX=SCREEN_CENTER_X-160
