stupid arcade mode

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -4174,7 +4174,7 @@ NumMisses=6
 
 [ScreenTitleJoin]
 Fallback="ScreenTitleMenu"
-ChoiceNames="1"
+ChoiceNames="GameStart"
 
 # ScrollerOnCommand=visible,false
 IdleCommentSeconds=-1
