--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3051,6 +3051,8 @@ PlayerType="Player"
 PlayerInitCommand=y,SCREEN_CENTER_Y;zoom,(THEME:GetMetric("Common","ScreenHeight")/480)
 StartGivesUp=true
 BackGivesUp=false
+# rage
+AllowCenter1Player=true
 #
 FailOnMissCombo=FailCombo()
 GivingUpGoesToPrevScreen=false
